5.
- Thêm các phương thức mới vào CommentRepository để lấy các bình luận dựa trên trạng thái phê duyệt và phân trang.
- Cải tiến UserRepository với các phương thức bổ sung để tìm kiếm và thống kê người dùng.
- Cập nhật ArticleService để sử dụng phân trang để lấy các bài viết phổ biến và mới nhất.
- Cải tiến BookingTourService để cải thiện cách xử lý trạng thái và xóa các mục nhập không sử dụng.
- Cải tiến EmailService bằng cách thêm email xác nhận và hủy đặt chỗ chi tiết.
- Cập nhật JwtService để sử dụng các phương thức phân tích cú pháp JWT mới và cải thiện cách xử lý khóa.
- Cải tiến định dạng ngày của PdfService để xử lý ngôn ngữ tốt hơn.
- Cải tiến TourService để trả về số liệu thống kê về chuyến tham quan có cấu trúc.
- Cập nhật UserService để cải thiện việc truy xuất số liệu thống kê người dùng.